fix: Add z-index to modal

--- a/src/App.css
+++ b/src/App.css
@@ -212,6 +212,7 @@ article div img {
   align-items: center;
   background-color: rgba(0, 0, 0, 0.7);
   backdrop-filter: blur(8px);
+  z-index: 5;
 }
 
 .modal-book-details article {
